# master

./: .gitignore  pyproject.toml
colorizer/: create_train_test_data.py
colorizer/moduls/: constants.py  paths.py  prepare_data.py
notebooks/: Simple_CNN_v1.5.ipynb  more_data_nn_2.ipynb  simple_CNN_1.ipynb
