[tool.poetry]
name = "master_work"
version = "0.1.0"
description = ""
authors = ["Marina Khromina"]

[tool.poetry.dependencies]
python = "3.8"
tensorflow = "^2.8.0"
numpy = "^1.22.3"
scikit-learn = "^1.0.2"
scipy = "^1.8.0"
matplotlib = "^3.5.1"
scikit-image = "^0.19.2"
tensorflow-hub = "^0.12.0"
tensorflow-gpu = "^2.8.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
